improvement to audio amd video and controls

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <div id='videos'>
         <video class="video-player" id="user-1" autoplay playsinline></video>
         <video class="video-player" id="user-2" autoplay playsinline></video>
+        <video class="video-player" id="user-3" autoplay playsinline></video>
     </div>
 
     <div class='buttons'>
         <a href='lobby.html'>
             <button id='leave-btn'>Leave</button>
         </a>
-        <button id='video-btn' onclick='toggleCamera()'>camera</button>
+        <button id='video-btn' onclick='toggleVideo()'>camera</button>
         <button id='audio-btn' onclick='toggleAudio()'>audio</button>
     </div>
     
