--- a/lobby.html
+++ b/lobby.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>Join or create room</h2>
+    <p>Enter your invite code below or create one if you dont have</p>
     <form id="join-form">
         <input type='text' name='invite' required/>
         <button>Join room</button>
